Take vec:matvec on Metal over a resident matrix, with a compensated accumulator
The Metal half of --gpu now accepts the GEMV from 2^21 matrix elements once its
matrix is resident -- the CUDA "offered twice, never written" rule -- and keeps
exactly one kind of array on the device: that matrix. Residency of every operand
and result, as CUDA keeps it, was measured on the training step and was slower
than the pure pool at every cap (an upload is a memcpy on unified memory; a slab
held out of the pool costs a fresh one), so it was not kept. MSL has no double,
so gemv_f32 sums in a compensated float-float pair, which lands on the scalar
defun's bits on 1024 of 1024 rows where a plain float sum lands on 229.
CudaResidency becomes DeviceResidency, shared by both backends; Gpu.worthRng is
probe-free like every other worth (it was false at every size on a Mac).
Measured on an M4 Max: a resident head GEMV is 4x the CPU back to back and 1.0x
once per token, because the GPU lowers its clocks after ~1 ms idle -- llama2
decodes at the same ~370 tok/s with the flag and without, story unchanged.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XpKk4uRD2ALMqAb8zkZ1Nr